--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ repositories {
 dependencies {
     compileOnly("io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT")
     compileOnly 'com.comphenix.protocol:ProtocolLib:5.3.0'
+
+    // JUnit for unit testing
+    testImplementation 'junit:junit:4.13.2'
+
+    // Mockito for mocking Spigot objects
+    testImplementation 'org.mockito:mockito-core:3.12.4'
 }
 
 def targetJavaVersion = 21
